--- a/cyc_next_app/server/.env
+++ b/cyc_next_app/server/.env
@@ -1,2 +1,2 @@
-PYTHONPATH = /Users/bachbui/miniforge3-m1/envs/py39-m1/bin/python:/Users/bachbui/works/cycai/cyc_next_app/server/python:/Users/bachbui/works/cycai/cycdataframe/
+PYTHONPATH = "/C://Users//HoaTV//anaconda3/"
 CLIENT_URL = "http://localhost:3000"
