--- a/cyc_next_app/server/.env
+++ b/cyc_next_app/server/.env
@@ -1,2 +1,3 @@
 PYTHONPATH = "/C://Users//HoaTV//anaconda3/"
 CLIENT_URL = "http://localhost:3000"
+PYTHON_EXEC = "C:\Users\HoaTV\AppData\Local\pypoetry\Cache\virtualenvs\cnext-JdNFw2Y_-py3.9"
