--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -33,6 +33,7 @@
         "@mui/system": "~5.0.1",
         "@open-rpc/client-js": "^1.6.2",
         "@reduxjs/toolkit": "^1.6.2",
+        "@types/react-beforeunload": "^2.1.1",
         "@types/react-plotly.js": "^2.5.0",
         "@uiw/react-codemirror": "~4.6.0",
         "ace-builds": "^1.4.13",
@@ -49,7 +50,6 @@
         "python-shell": "^3.0.0",
         "react": "17.0.2",
         "react-ace": "^9.4.4",
-        "react-dom": "17.0.2",
         "react-feather": "^2.0.9",
         "react-grid-layout": "^1.3.1",
         "react-helmet": "^6.1.0",
