--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -33,7 +33,6 @@
         "@mui/system": "~5.0.1",
         "@open-rpc/client-js": "^1.6.2",
         "@reduxjs/toolkit": "^1.6.2",
-        "@types/react-beforeunload": "^2.1.1",
         "@types/react-plotly.js": "^2.5.0",
         "@uiw/react-codemirror": "~4.6.0",
         "ace-builds": "^1.4.13",
@@ -50,6 +49,7 @@
         "python-shell": "^3.0.0",
         "react": "17.0.2",
         "react-ace": "^9.4.4",
+        "react-beforeunload": "^2.1.1",
         "react-feather": "^2.0.9",
         "react-grid-layout": "^1.3.1",
         "react-helmet": "^6.1.0",
@@ -83,6 +83,7 @@
         "@types/react-scroll-into-view-if-needed": "^2.1.1",
         "@types/shortid": "0.0.29",
         "@types/styled-components": "^5.1.14",
+        "@types/react-beforeunload": "^2.1.1",
         "babel-plugin-styled-components": "^1.13.2",
         "eslint": "7.32.0",
         "eslint-config-next": "11.1.2",
