--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -53,6 +53,7 @@
         "react-feather": "^2.0.9",
         "react-grid-layout": "^1.3.1",
         "react-helmet": "^6.1.0",
+        "react-hot-keys": "^2.7.2",
         "react-html-parser": "^2.0.2",
         "react-is": "^18.0.0",
         "react-moment": "^1.1.1",
