--- a/cyc_next_app/server/pyproject.toml
+++ b/cyc_next_app/server/pyproject.toml
@@ -22,6 +22,7 @@ multipledispatch = "^0.6.0"
 python-language-server = "^0.36.2"
 cnextlib = "^0.3.1"
 netron = "^5.7.8"
+sentry-sdk = "^1.5.12"
 
 [tool.poetry.dev-dependencies]
 
