--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ multipledispatch = "^0.6.0"
 python-language-server = "^0.36.2"
 cnextlib = "^0.2.0"
 netron = "^5.7.8"
+sentry-sdk = "^1.5.12"
 
 [tool.poetry.dev-dependencies]
 
