--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -51,6 +51,7 @@
         "react": "17.0.2",
         "react-ace": "^9.4.4",
         "react-beforeunload": "^2.1.1",
+        "react-dom": "^17.0.2",
         "react-feather": "^2.0.9",
         "react-grid-layout": "^1.3.1",
         "react-helmet": "^6.1.0",
@@ -79,12 +80,13 @@
         "@types/ace": "^0.0.47",
         "@types/inline-style-prefixer": "^5.0.0",
         "@types/react": "17.0.27",
+        "@types/react-beforeunload": "^2.1.1",
+        "@types/react-dom": "^18.0.4",
         "@types/react-grid-layout": "^1.3.1",
         "@types/react-helmet": "^6.1.3",
         "@types/react-scroll-into-view-if-needed": "^2.1.1",
         "@types/shortid": "0.0.29",
         "@types/styled-components": "^5.1.14",
-        "@types/react-beforeunload": "^2.1.1",
         "babel-plugin-styled-components": "^1.13.2",
         "eslint": "7.32.0",
         "eslint-config-next": "11.1.2",
