add auth0 to package.json

--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -11,6 +11,7 @@
         "test": "jest config ./jest.config.js --watch"
     },
     "dependencies": {
+        "@auth0/auth0-react": "^1.10.1",
         "@codemirror/autocomplete": "^0.19.3",
         "@codemirror/lang-javascript": "^0.19.2",
         "@codemirror/lang-json": "^0.19.2",
