--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ python-language-server = "^0.36.2"
 cnextlib = "^0.2.0"
 netron = "^5.7.8"
 sentry-sdk = "^1.5.12"
+protobuf = "3.20.1"
 
 [tool.poetry.dev-dependencies]
 
