--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -18,7 +18,10 @@
         "@codemirror/lang-python": "^0.19.2",
         "@codemirror/lang-sql": "^0.19.2",
         "@codemirror/language": "^0.19.3",
+        "@codemirror/history": "^0.19.2",
         "@codemirror/lint": "^0.19.2",
+        "@codemirror/matchbrackets": "^0.19.2",
+        "@codemirror/closebrackets": "^0.19.2",
         "@codemirror/state": "^0.19.2",
         "@codemirror/theme-one-dark": "^0.19.0",
         "@emotion/react": "~11.4.1",
