--- a/cyc_next_app/server/.server.yaml
+++ b/cyc_next_app/server/.server.yaml
@@ -6,15 +6,14 @@ n2p_comm:
     host: tcp://127.0.0.1
     kernel_control_port: 5005
 
-path_to_cnextlib: 'cycdataframe'
+path_to_cnextlib: "cycdataframe"
 
 projects:
     open_projects:
-        - id: '1'
-          name: 'Skywalker'
-          path: 'cnext_sample_projects/Skywalker'
-    active_project: '1'
-    
+        - id: "1"
+          name: "Skywalker"
+          path: "cnext_sample_projects/Skywalker"
+    active_project: "1"
 # p2n_comm:
 #     host: tcp://127.0.0.1
 #     port: 5000
@@ -23,11 +22,11 @@ projects:
 #     host: tcp://127.0.0.1
 #     kernel_control_port: 5005
 
-# path_to_cnextlib: 'G:/DEV/CycAI/cycdataframe'
+# path_to_cnextlib: "G:/DEV/CycAI/cycdataframe"
 
 # projects:
 #     open_projects:
-#         - id: '1'
-#           name: 'Skywalker'
-#           path: 'G:/DEV/CycAI/cnext_sample_projects/Skywalker'
-#     active_project: '1'
+#         - id: "1"
+#           name: "Skywalker"
+#           path: "G:/DEV/CycAI/cnext_sample_projects/Skywalker"
+#     active_project: "1"
