--- a/cyc_next_app/server/.server.yaml
+++ b/cyc_next_app/server/.server.yaml
@@ -14,6 +14,15 @@ projects:
           name: "Skywalker"
           path: "cnext_sample_projects/Skywalker"
     active_project: "1"
+
+# path_to_cnextlib: "/Users/bachbui/works/cycai/cycdataframe"
+
+# projects:
+#     open_projects:
+#         - id: "1"
+#           name: "Skywalker"
+#           path: "/Users/bachbui/works/cycai/cnext_sample_projects/Skywalker"
+#     active_project: "1"
 # p2n_comm:
 #     host: tcp://127.0.0.1
 #     port: 5000
