--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ package-lock.json
 cyc_next_app/package-lock.json
 cyc_next_app/server/package-lock.json
 cyc_next_app/server/.server.yaml
+*/workspace.code-workspace
