--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev",
         "debug": "cross-env NODE_OPTIONS='--inspect' next",
         "build": "next build",
-        "start": "next start --openssl-legacy-provider",
+        "start": "next start",
         "lint": "next lint",
         "test": "jest config ./jest.config.js --watch"
     },
@@ -83,8 +83,7 @@
         "socket.io-client": "^4.2.0",
         "styled-components": "^5.3.1",
         "typescript": "4.4.3",
-        "vscode-languageserver-protocol": "^3.16.0",
-        "xterm-for-react": "^1.0.4"
+        "vscode-languageserver-protocol": "^3.16.0"
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
