--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -13,15 +13,15 @@
     "dependencies": {
         "@auth0/auth0-react": "^1.10.1",
         "@codemirror/autocomplete": "^0.19.3",
+        "@codemirror/closebrackets": "^0.19.2",
+        "@codemirror/history": "^0.19.2",
         "@codemirror/lang-javascript": "^0.19.2",
         "@codemirror/lang-json": "^0.19.2",
         "@codemirror/lang-python": "^0.19.2",
         "@codemirror/lang-sql": "^0.19.2",
         "@codemirror/language": "^0.19.3",
-        "@codemirror/history": "^0.19.2",
         "@codemirror/lint": "^0.19.2",
         "@codemirror/matchbrackets": "^0.19.2",
-        "@codemirror/closebrackets": "^0.19.2",
         "@codemirror/state": "^0.19.2",
         "@codemirror/theme-one-dark": "^0.19.0",
         "@emotion/react": "~11.4.1",
@@ -65,6 +65,7 @@
         "react-hot-keys": "^2.7.2",
         "react-html-parser": "^2.0.2",
         "react-is": "^18.0.0",
+        "react-markdown": "^8.0.3",
         "react-moment": "^1.1.1",
         "react-perfect-scrollbar": "^1.5.8",
         "react-plotly.js": "^2.5.1",
@@ -77,11 +78,13 @@
         "react-toastify": "^8.0.3",
         "react-transition-group": "^4.4.2",
         "redux": "^4.1.1",
+        "remark-gfm": "^3.0.1",
         "shortid": "^2.2.16",
         "socket.io-client": "^4.2.0",
         "styled-components": "^5.3.1",
         "typescript": "4.4.3",
-        "vscode-languageserver-protocol": "^3.16.0"
+        "vscode-languageserver-protocol": "^3.16.0",
+        "xterm-addon-fit": "^0.5.0"
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
