--- a/cyc_next_app/server/package.json
+++ b/cyc_next_app/server/package.json
@@ -12,11 +12,12 @@
         "express": "~4.17.1",
         "node-addon-api": "~4.2.0",
         "node-gyp-build": "~4.3.0",
+        "nodemon": "~2.0.15",
         "python-shell": "~3.0.1",
         "socket.io": "~4.2.0",
         "socket.io-client": "~4.2.0",
+        "ssh2": "^1.11.0",
         "yaml": "~1.10.2",
-        "zeromq": "~6.0.0-beta.6",
-        "nodemon": "~2.0.15"
+        "zeromq": "~6.0.0-beta.6"
     }
 }
