--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -84,7 +84,8 @@
         "styled-components": "^5.3.1",
         "typescript": "4.4.3",
         "vscode-languageserver-protocol": "^3.16.0",
-        "xterm-addon-fit": "^0.5.0"
+        "xterm-addon-fit": "^0.5.0",
+        "xterm-for-react": "^1.0.4"
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
