[wip] 1. create new grammar with the new version 2. have to use the default autocomplete. need to find a way to use ours own one ./autocomplete 3. dfFilter grammar is old

--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -12,24 +12,24 @@
     },
     "dependencies": {
         "@auth0/auth0-react": "^1.10.1",
-        "@codemirror/autocomplete": "^0.19.3",
-        "@codemirror/closebrackets": "^0.19.2",
-        "@codemirror/history": "^0.19.2",
-        "@codemirror/lang-javascript": "^0.19.2",
-        "@codemirror/lang-json": "^0.19.2",
-        "@codemirror/lang-python": "^0.19.2",
-        "@codemirror/lang-sql": "^0.19.2",
-        "@codemirror/language": "^0.19.3",
-        "@codemirror/lint": "^0.19.2",
-        "@codemirror/matchbrackets": "^0.19.2",
-        "@codemirror/state": "^0.19.2",
-        "@codemirror/theme-one-dark": "^0.19.0",
+        "@codemirror/autocomplete": "~6.0.0",
+        "@codemirror/commands": "~6.0.0",
+        "@codemirror/search": "~6.0.0",
+        "@codemirror/lang-javascript": "~6.0.0",
+        "@codemirror/lang-json": "~6.0.0",
+        "@codemirror/lang-python": "~6.0.0",
+        "@codemirror/lang-sql": "~6.0.0",
+        "@codemirror/language": "~6.0.0",
+        "@codemirror/lint": "~6.0.0",
+        "@codemirror/state": "~6.0.1",
+        "@codemirror/view": "~6.0.1",
+        "@codemirror/theme-one-dark": "~6.0.0",
         "@emotion/react": "~11.4.1",
         "@emotion/styled": "~11.3.0",
         "@jupyter-widgets/jupyterlab-manager": "^3.1.0",
         "@jupyterlab/outputarea": "^3.3.2",
         "@jupyterlab/rendermime": "^3.3.2",
-        "@lezer/python": "^0.15.0",
+        "@lezer/python": "^1.0.0",
         "@lumino/coreutils": "^1.12.0",
         "@lumino/messaging": "^1.10.1",
         "@lumino/widgets": "^1.31.1",
@@ -42,7 +42,7 @@
         "@reduxjs/toolkit": "^1.6.2",
         "@sentry/nextjs": "^6.19.7",
         "@types/react-plotly.js": "^2.5.0",
-        "@uiw/react-codemirror": "~4.6.0",
+        "@uiw/react-codemirror": "~4.9.2",
         "ace-builds": "^1.4.13",
         "animate.css": "^4.1.1",
         "ansi-to-react": "^6.1.6",
@@ -86,7 +86,9 @@
         "vscode-languageserver-protocol": "^3.16.0"
     },
     "devDependencies": {
-        "@lezer/generator": "^0.15.2",
+        "@lezer/generator": "^1.0.0",
+        "@lezer/lr": "^1.0.0",
+        "@lezer/common": "^1.0.0",
         "@types/ace": "^0.0.47",
         "@types/inline-style-prefixer": "^5.0.0",
         "@types/react": "17.0.27",
