update cypress way

--- a/cyc_next_app/tests/intergration/Dockerfile
+++ b/cyc_next_app/tests/intergration/Dockerfile
@@ -12,4 +12,4 @@ RUN npm i
 # verify that Cypress has been installed correctly.
 # running this command separately from "cypress run" will also cache its result
 # to avoid verifying again when running the tests
-RUN npx cypress verify --config-file app/cypress.config.js
+RUN npx cypress verify
