--- a/cyc_next_app/tests/intergration/Dockerfile
+++ b/cyc_next_app/tests/intergration/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app
 
 # dependencies will be installed only if the package files change
 COPY package.json .
+COPY cypress.config.js .
 
 # by setting CI environment variable we switch the Cypress install messages
 # to small "started / finished" and avoid 1000s of lines of progress messages
