--- a/cyc_next_app/tests/intergration/Dockerfile
+++ b/cyc_next_app/tests/intergration/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 
 # dependencies will be installed only if the package files change
 COPY package.json .
-COPY cypress.config.js .
+# COPY cypress.config.js .
 
 # by setting CI environment variable we switch the Cypress install messages
 # to small "started / finished" and avoid 1000s of lines of progress messages
@@ -14,3 +14,4 @@ RUN npm i
 # running this command separately from "cypress run" will also cache its result
 # to avoid verifying again when running the tests
 RUN npm run cyp
+# RUN npx cypress verify
