--- a/cyc_next_app/tests/intergration/Dockerfile
+++ b/cyc_next_app/tests/intergration/Dockerfile
@@ -13,5 +13,5 @@ RUN npm i
 # verify that Cypress has been installed correctly.
 # running this command separately from "cypress run" will also cache its result
 # to avoid verifying again when running the tests
-RUN npm run cyp
-# RUN npx cypress verify
+# RUN npm run cyp
+RUN npx cypress verify
