--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -85,6 +85,7 @@
         "typescript": "4.4.3",
         "vscode-languageserver-protocol": "^3.16.0",
         "xterm-addon-fit": "^0.5.0",
+        "xterm-addon-search": "^0.8.2",
         "xterm-for-react": "^1.0.4"
     },
     "devDependencies": {
