--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -27,6 +27,7 @@
         "@emotion/react": "~11.4.1",
         "@emotion/styled": "~11.3.0",
         "@jupyter-widgets/jupyterlab-manager": "^3.1.0",
+        "@jupyterlab/coreutils": "^5.4.3",
         "@jupyterlab/outputarea": "^3.3.2",
         "@jupyterlab/rendermime": "^3.3.2",
         "@lezer/python": "^0.15.0",
