--- a/cnext_app/server/pyproject.toml
+++ b/cnext_app/server/pyproject.toml
@@ -11,11 +11,11 @@ python = ">=3.9"
 plotly = "^5.7.0"
 simplejson = "^3.17.6"
 requests = "^2.27.1"
-mlflow = "^1.25.1"
-zmq = "^0.0.0"
+mlflow = "~1.25.1"
+pyzmq = "~22.3.0"
 send2trash = "^1.8.0"
-jupyter-client = "^7.2.2"
-jupyterlab = "^3.3.4"
+jupyter-client = "~7.2.2"
+jupyterlab = "~3.3.4"
 matplotlib = "^3.5.1"
 pandas = "1.3.5"
 multipledispatch = "^0.6.0"
