--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -56,6 +56,7 @@
         "next": "11.1.2",
         "polished": "^4.1.3",
         "python-shell": "^3.0.0",
+        "re-resizable": "^6.9.9",
         "react": "17.0.2",
         "react-ace": "^9.4.4",
         "react-beforeunload": "^2.1.1",
@@ -85,6 +86,7 @@
         "styled-components": "^5.3.1",
         "typescript": "4.4.3",
         "vscode-languageserver-protocol": "^3.16.0",
+        "xterm": "^4.19.0",
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-search": "^0.8.2",
         "xterm-for-react": "^1.0.4"
