--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ Thumbs.db
 
 .next/
 
-package-lock.json
-cnext_app/package-lock.json
-cnext_app/server/package-lock.json
+# package-lock.json
+# cnext_app/package-lock.json
+# cnext_app/server/package-lock.json
 cnext_app/server/.server.yaml
 */workspace.code-workspace
