--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+
+      - name: Build IDE
+        working-directory: ./cnext_app
+        run: |
+          npm install --force
+          npm run build
+          npm run start
+
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
