--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,11 +41,11 @@ jobs:
 
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
-        with:
-          working-directory: cnext_app/tests/intergration
-          start: |
-            cd ../../ && npm run start
-          spec: |
-            cypress/**/*.spec.js
+      # - name: Cypress run
+      #   uses: cypress-io/github-action@v4
+      #   with:
+      #     working-directory: cnext_app/tests/intergration
+      #     start: |
+      #       cd ../../ && npm run start
+      #     spec: |
+      #       cypress/**/*.spec.js
