--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,13 +25,13 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - name: Install poetry
-        run: pipx install poetry
+      # - name: Install poetry
+      #   run: pipx install poetry
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-          cache: 'poetry'
+      # - uses: actions/setup-python@v4
+      #   with:
+      #     python-version: '3.9'
+      #     cache: 'poetry'
 
       - name: Build IDE
         working-directory: ./cnext_app
@@ -46,6 +46,6 @@ jobs:
       #   with:
       #     working-directory: cnext_app/tests/intergration
       #     start: |
-      #       cd ../../ && npm run start
+      #       npm run  --prefix ../.. start
       #     spec: |
       #       cypress/**/*.spec.js
