--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,31 @@ on:
 
 jobs:
 
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          # push: true
+          tags: cycai/cnext:latest
+
   cypress-run:
     runs-on: ubuntu-latest
     steps:
@@ -40,8 +65,8 @@ jobs:
         run: |
           pip install poetry
           chmod +x start.sh
-          npm install --force
           poetry install
+          npm install --force
 
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
