--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,62 +1,62 @@
 name: Release
 
-on:
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - 'README.md'
-      - 'LICENSE'
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths-ignore:
+#       - 'README.md'
+#       - 'LICENSE'
 
-  pull_request:
-    paths-ignore:
-      - 'README.md'
-      - 'LICENSE'
+#   pull_request:
+#     paths-ignore:
+#       - 'README.md'
+#       - 'LICENSE'
 
-jobs:
+# jobs:
 
-  # pypi:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+#   # pypi:
+#   #   runs-on: ubuntu-latest
+#   #   steps:
+#   #     - name: Checkout
+#   #       uses: actions/checkout@v3
 
-  #     - name: Set up Python 3.9
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.9'
+#   #     - name: Set up Python 3.9
+#   #       uses: actions/setup-python@v4
+#   #       with:
+#   #         python-version: '3.9'
 
-  #     - name: Install Poetry
-  #       run: pip install poetry
+#   #     - name: Install Poetry
+#   #       run: pip install poetry
 
-  #     - name: Build project for distribution
-  #       run: poetry build
+#   #     - name: Build project for distribution
+#   #       run: poetry build
 
-  #     - name: Publish to PyPI
-  #       env:
-  #         POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
-  #       run: poetry publish
+#   #     - name: Publish to PyPI
+#   #       env:
+#   #         POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
+#   #       run: poetry publish
 
-  test-install:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        # python-version: ["3.9", "3.10"]
-        python-version: ["3.9"]
-    runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }} Python ${{ matrix.python-version }}
-    steps:
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+#   test-install:
+#     strategy:
+#       matrix:
+#         os: [ubuntu-latest, windows-latest, macos-latest]
+#         # python-version: ["3.9", "3.10"]
+#         python-version: ["3.9"]
+#     runs-on: ${{ matrix.os }}
+#     name: ${{ matrix.os }} Python ${{ matrix.python-version }}
+#     steps:
+#       - name: Set up Python ${{ matrix.python-version }}
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: ${{ matrix.python-version }}
 
-      - name: Install CNext
-        run: pip install cnext
+#       - name: Install CNext
+#         run: pip install cnext
 
-      - name: Init CNext
-        run: echo "n" | cnext-init
+#       - name: Init CNext
+#         run: echo "n" | cnext-init
 
-      - name: Run CNext
-        run: |
-          cnext-run &
+#       - name: Run CNext
+#         run: |
+#           cnext-run &
