--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"  # Markdown files are supported
 homepage = "https://cyc-ai.com/"
 
 packages = [
-    { include = "cnext_app" },
+    { include = "server" },
 ]
 
 exclude = [
