--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,5 @@
 /cnext_app/out
 /cnext_app/node_modules
-/server/public
-/server/server/node_modules
+/cnext_server/public
+/cnext_server/server/node_modules
 /cnext_app/tests/
