--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,13 +35,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Login to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Download Dasel
         run: |
           curl -LO https://github.com/TomWright/dasel/releases/latest/download/dasel_linux_amd
@@ -52,3 +45,10 @@ jobs:
         id: version
         run: echo "::set-output name=version::$(cat pyproject.toml | ./dasel -r toml .tool.poetry.version)"
 
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          build-args:
+            - CNEXT_VERSION=${{ steps.version.outputs.version }}
+          tags: cycai/cnext:v${{ steps.version.outputs.version }}
