--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,36 +9,68 @@ on:
       - 'LICENSE'
 
   pull_request:
+    branches:
+      - main
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
 
 jobs:
 
-  # docker:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+  prebuild:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: |
+            cnext_app/package-lock.json
+            cnext_server/server/package-lock.json
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
+  build:
+    runs-on: ubuntu-latest
+    needs: prebuild
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     # - name: Login to DockerHub
-  #     #   uses: docker/login-action@v2
-  #     #   with:
-  #     #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #     #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: |
+            cnext_app/package-lock.json
+            cnext_server/server/package-lock.json
 
-  #     - name: Build and push
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         context: .
-  #         # push: true
-  #         tags: cycai/cnext:latest
+      - name: Install poetry
+        run: pipx install poetry
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'poetry'
+
+      - name: Install dependencies
+        working-directory: ./cnext_app
+        run: npm ci
+
+      - name: Install dependencies
+        working-directory: ./cnext_server/server
+        run: npm ci
+
+      - name: Build IDE
+        working-directory: ./cnext_app
+        run: npm run build
+
+      - name: Build Server
+        working-directory: ./cnext_server/server
+        run: |
+          chmod +x start.sh
+          poetry install
 
   # cypress-run:
   #   runs-on: ubuntu-latest
@@ -51,24 +83,6 @@ jobs:
   #         node-version: 16
   #         cache: 'npm'
   #         cache-dependency-path: '**/package-lock.json'
-
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.9'
-
-  #     - name: Build IDE
-  #       working-directory: ./cnext_app
-  #       run: |
-  #         npm install --force
-  #         npm run build
-
-  #     - name: Build Server
-  #       working-directory: ./cnext_app/server
-  #       run: |
-  #         pip install poetry
-  #         chmod +x start.sh
-  #         poetry install
-  #         npm install --force
 
   #     # Install NPM dependencies, cache them correctly
   #     # and run all Cypress tests
