--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,14 @@ jobs:
             cnext_app/package-lock.json
             cnext_server/server/package-lock.json
 
+      - name: Install dependencies
+        working-directory: ./cnext_app
+        run: npm ci
+
+      - name: Install dependencies
+        working-directory: ./cnext_server/server
+        run: npm ci
+
   build:
     runs-on: ubuntu-latest
     needs: prebuild
