--- a/cnext_server/server/server.yaml
+++ b/cnext_server/server/server.yaml
@@ -6,4 +6,7 @@ n2p_comm:
     host: tcp://127.0.0.1
     kernel_control_port: 5005
 
-path_to_cnextlib: 'cycdataframe'
+path_to_cnextlib: 'D:/CNext/cycdataframe'
+jupyter_server:
+    port: 5008
+    token: token123
