--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cnext"
+name = "cnext-test1"
 version = "0.4.29"
 description = "The data-centric workspace for AI & DS"
 authors = ["CycAI Inc"]
