--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,27 +142,29 @@ jobs:
     needs: build
     name: ${{ matrix.os }} Python ${{ matrix.python-version }}
     steps:
-      - name: Download Dasel
+      - name: Get version
+        id: version
         if: matrix.os == 'ubuntu-latest'
         run: |
           curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep linux_amd64 | grep -v .gz | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
           mv ./dasel /usr/local/bin/dasel
+          echo "::set-output name=version::$(cat pyproject.toml | dasel -r toml .tool.poetry.version)"
 
-      - name: Download Dasel
+      - name: Get version
+        id: version
         if: matrix.os == 'macos-latest'
         run: |
           curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep -v .gz | grep darwin_amd64 | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
           mv ./dasel /usr/local/bin/dasel
+          echo "::set-output name=version::$(cat pyproject.toml | dasel -r toml .tool.poetry.version)"
 
-      - name: Download Dasel
+      - name: Get version
+        id: version
         if: matrix.os == 'windows-latest'
         run: |
           scoop bucket add extras
           scoop install dasel
-
-      - name: Get version
-        id: version
-        run: echo "::set-output name=version::$(cat pyproject.toml | dasel -r toml .tool.poetry.version)"
+          echo "::set-output name=version::$(cat pyproject.toml | dasel -r toml .tool.poetry.version)"
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
