--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
     name: ${{ matrix.os }} Python ${{ matrix.python-version }}
     steps:
       - name: Get version
-        id: version
+        id: version-ubuntu
         if: matrix.os == 'ubuntu-latest'
         run: |
           curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep linux_amd64 | grep -v .gz | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
@@ -151,7 +151,7 @@ jobs:
           echo "::set-output name=version::$(cat pyproject.toml | dasel -r toml .tool.poetry.version)"
 
       - name: Get version
-        id: version
+        id: version-macos
         if: matrix.os == 'macos-latest'
         run: |
           curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep -v .gz | grep darwin_amd64 | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
@@ -159,7 +159,7 @@ jobs:
           echo "::set-output name=version::$(cat pyproject.toml | dasel -r toml .tool.poetry.version)"
 
       - name: Get version
-        id: version
+        id: version-windows
         if: matrix.os == 'windows-latest'
         run: |
           scoop bucket add extras
