--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,6 +148,7 @@ jobs:
         run: |
           curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep linux_amd64 | grep -v .gz | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
           mv ./dasel /usr/local/bin/dasel
+          pwd
           ls -la
           echo "::set-output name=version::$(cat pyproject.toml | dasel -r toml .tool.poetry.version)"
 
