--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,26 +18,9 @@ on:
       - 'LICENSE'
 
 env:
-  BASE_DEV_VERSION: 1.0.0
+  BASE_DEV_VERSION: 0.4.29
 
 jobs:
-
-  dump_contexts_to_log:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Dump GitHub context
-        id: github_context_step
-        run: echo '${{ toJSON(github) }}'
-      - name: Dump job context
-        run: echo '${{ toJSON(job) }}'
-      - name: Dump steps context
-        run: echo '${{ toJSON(steps) }}'
-      - name: Dump runner context
-        run: echo '${{ toJSON(runner) }}'
-      - name: Dump strategy context
-        run: echo '${{ toJSON(strategy) }}'
-      - name: Dump matrix context
-        run: echo '${{ toJSON(matrix) }}'
 
   build:
     runs-on: ubuntu-latest
@@ -127,6 +110,7 @@ jobs:
         run: poetry build
 
       - name: Publish to PyPI
+        if: startsWith(github.ref, 'refs/tags/v')
         env:
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
         run: poetry publish
@@ -137,7 +121,7 @@ jobs:
       #   with:
       #     payload: |
       #       {
-      #         "text": "CNext ${{ github.ref_name }} has been released."
+      #         "text": "CNext ${{ env.REL_VERSION }} has been released."
       #       }
       #   env:
       #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
