--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -50,4 +50,6 @@ jobs:
           push: true
           build-args: |
             CNEXT_VERSION=${{ steps.version.outputs.version }}
-          tags: cycai/cnext:v${{ steps.version.outputs.version }}
+          tags: |
+            cycai/cnext:latest
+            cycai/cnext:v${{ steps.version.outputs.version }}
