--- a/cnext_app/.env
+++ b/cnext_app/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_SERVER_SOCKET_ENDPOINT = "/"
 SENTRY_PROJECT = "nextjs"
 SENTRY_ORG = "cnext"
+NEXT_PUBLIC_TERMINAL_ENDPOINT = "http://localhost"
