--- a/cnext_app/.env.development
+++ b/cnext_app/.env.development
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_SERVER_SOCKET_ENDPOINT = "http://localhost:4000"
 SENTRY_PROJECT = "nextjs"
 SENTRY_ORG = "cnext"
+NEXT_PUBLIC_TERMINAL_ENDPOINT = "http://localhost"
